<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drop-It</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Drop a Message</string>
    <string name="title_section2">Pick Up Messages</string>
    <string name="title_section3">Held Messages</string>
    <string name="title_area_hint">Message Title</string>
    <string name="text_area_hint">Start typing message here</string>
    <string name="drop_it_button">Drop It</string>
    <string name="title_activity_display_message_list">Display Message List Activity</string>
    <string name="title_activity_display_message_string">Dropped Message</string>
    <string name="title_activity_display_message_image">Dropped Image</string>
    <string name="text_area_message">Message Body</string>
    <string name="title_activity_choose_location">Choose Location Activity</string>
    <string name="choose_location_prompt">Select your best location from the following: </string>
    <string name="choose_button">Done</string>
    <string name="manual_loc_entry_string">Manual location update</string>
    <string name="qr_loc_entry_string">QR location update</string>
    <string name="title_activity_manual_location_entry">Manual Location Entry</string>
    <string name="location_field_hint">Enter location</string>
    <string name="scan_for_location">Scan QR code for current location</string>
    <string name="service_name">MF Network service</string>
    <string name="service_started">Service started</string>
    <string name="service_label">MF Service Label</string>
    <string name="gnrs_IP">192.168.1.1</string>
    <string name="gnrs_port">5000</string>
    <string name="gnrs_listen_port">5001</string>
    <string name="stats_server">http://192.168.1.2:8080</string>
    <string name="title_activity_qrlocation_entry">QR Location Entry</string>
    <string name="scan_button_text">Begin scan</string>
    <string name="rest_serv">Restart service</string>

</resources>
